# atom

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SECURITY.md  atom-setup  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: HOW_TO_DESIGN.md  HOW_TO_PICK_DEPLOY_TARGET.md  HOW_TO_WRITE_CONSTITUTION.md  INBOX.md  LEARNINGS_TAXONOMY.md  LESSONS_LEARNED.md  MIGRATING.md  PATTERNS.md  VOICE.md  WORKFLOW.md
docs/planning/: README.md  atom-setup.md  distribution.md  docker.md  learnings.md  model-race-auto.md  model-race.md  nucleus.md  stack-presets.md  v0.2.md  v0.3.md
extras/: README.md
extras/ai/: .gitkeep
extras/docker/: .dockerignore  Dockerfile  (+3 more)
extras/web/python-fastapi/: .dockerignore  .env.example  DEPLOY.md  Dockerfile  README.snippet.md  pyproject.toml
extras/web/python-fastapi/app/: main.py
extras/web/python-fastapi/learnings/: healthz-stays-cheap.md  pydantic-v2-over-v1.md  uvicorn-worker-count.md
extras/web/rust-axum/: .dockerignore  .env.example  Cargo.toml  DEPLOY.md  Dockerfile  README.snippet.md
extras/web/rust-axum/learnings/: cargo-chef-for-docker.md  release-profile-strip-lto.md  rust-log-defaults.md
extras/web/rust-axum/src/: main.rs
learnings/: README.md
scaffold/: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.example  GEMINI.md  README.md  package.json
scripts/: README.md  copy-learnings.mjs  regen-screenshots.sh  test-atom-setup.sh  test-nucleus.sh
(+55 files in other folders)
