[package]
name = "app"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
# Strip debug symbols from release binaries (smaller image).
strip = true
# Aggressive optimization. Slows compile, shrinks binary, speeds runtime.
lto = "thin"
codegen-units = 1
